@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.9 2018/07/28 14:40:50 brook Exp $
+# $NetBSD: Makefile,v 1.10 2019/07/31 20:23:32 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/genetics/
-COMMENT=	Classification and regression based on a forest of trees
-LICENSE=	gnu-gpl-v2
+COMMENT=	Breiman and Cutler's Random Forests for Classification and Regression
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
 
 R_PKGNAME=	randomForest
-R_PKGVER=	4.6-10
+R_PKGVER=	4.6-14
 
 USE_LANGUAGES=	c fortran
 
